--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-vue": "^4.1.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vue": "^9.11.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vue-tsc": "^1.4.2"
