--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-vue": "^4.1.0",
     "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vue-tsc": "^1.4.2"
