--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,9 @@
     "parser": "@typescript-eslint/parser",
     "sourceType": "module"
   },
-  "extends": ["plugin:vue/vue3-recommended"],
+  "plugins": ["prettier"],
+  "extends": ["plugin:vue/vue3-recommended", "prettier"],
   "rules": {
-    "semi": "error",
-    "quotes": ["error", "double"],
-    "no-multiple-empty-lines": "error"
+    "prettier/prettier": "error"
   }
 }
