--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@types/node": "^20.1.0",
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-vue": "^4.1.0",
     "eslint": "^8.39.0",
